--- a/changelog/upgrade-migration/breaking-changes.mdx
+++ b/changelog/upgrade-migration/breaking-changes.mdx
@@ -1,211 +1,267 @@
 ---
-title: "Breaking Changes & Migration Steps"
-description: "Announces any breaking changes introduced in recent versions and outlines clear steps for migrating existing tests, mocks, or integrations. Helps users eliminate upgrade blockers by understanding root causes and solutions."
+title: "Breaking Changes"
+description: "Highlights updates that may require user action—such as modified APIs, required compiler changes, or changed default behaviors. Aimed at helping users anticipate and mitigate disruptions."
 ---
 
-# Breaking Changes & Migration Steps
+# Breaking Changes
 
-This page details the critical breaking changes introduced in recent GoogleTest versions and provides clear, actionable migration steps to help users update their existing test suites, mocks, and integrations successfully. By understanding these changes and following the outlined procedures, you can avoid upgrade blockers and maintain reliable, maintainable test code.
+This page outlines significant changes in GoogleMock that may impact your existing tests and mock implementations. These alterations potentially require you to update your code—such as modifying mock method declarations, adapting to new behaviors around expectations and strictness, or adjusting usage patterns for mock objects and methods.
+
+Understanding these breaking changes will help you anticipate and mitigate disruptions as you upgrade to newer versions of GoogleMock.
 
 ---
 
-## 1. Breaking Change Overview
+## 1. Transition from `MOCK_METHODn` to `MOCK_METHOD`
 
-GoogleTest strives for backward compatibility wherever possible. However, on occasion, intrinsic limitations or necessary improvements lead to breaking changes that affect how tests and mocks are defined or executed. These changes typically stem from deeper language or framework constraints that, when unaddressed, may cause silent errors or confusing behavior.
+### What Changed
+GoogleMock evolved its macro-based mocking interface by introducing the generic `MOCK_METHOD` macro in 2018, which replaced the older family of macros named `MOCK_METHODn` (where `n` corresponds to the number of method parameters). The new macro offers a more consistent and flexible approach to declaring mock methods.
 
-This page focuses exclusively on breaking changes that impact the user-facing testing and mocking workflows and *not* on internal implementation adjustments.
+### Why It Matters
+Existing mock classes using `MOCK_METHODn` macros will continue to work, but migrating to `MOCK_METHOD` offers several benefits:
 
+- **Cleaner syntax:** `MOCK_METHOD` explicitly separates the return type, method name, and argument list.
+- **Improved overload and qualifier support:** It supports `const`, `override`, `noexcept`, call types, and reference qualifiers in a single, uniform syntax.
+- **Better compiler compatibility:** The new macro handles tricky cases like unprotected commas in types more gracefully.
 
-## 2. Critical Breaking Changes
+### What to Do
+- **Migrate old mocks** to use `MOCK_METHOD`:
 
-### 2.1. Prohibition of Underscores (`_`) in Test Suite and Test Names
-
-**What changed?**
-GoogleTest now warns and may fail to run tests if the test suite name or test name contains underscores (`_`), especially when they appear at the start or end, or consecutively within names.
-
-**Reason:**
-Under the hood, GoogleTest generates class names by concatenating the test suite and test names with underscores. Certain patterns involving underscores, like leading underscores followed by uppercase letters or consecutive underscores, produce class names that are reserved by C++ or cause duplication.
-
-**Impact:**
-If your test names or test suite names contain underscores, this can cause name collisions or compilation errors in future compiler or GoogleTest versions.
-
-**Migration steps:**
-- Avoid using underscores in the names of your tests and test suites.
-- Rename existing tests to use camel case or mixed case without underscores.
-- For example:
-  ```cpp
-  // Avoid:
-  TEST(My_TestSuite, Test_Case) { ... }
-
-  // Use instead:
-  TEST(MyTestSuite, TestCase) { ... }
-  ```
-
-**Additional Notes:**
-- Underscores anywhere inside the names are disallowed to prevent collisions such as `TEST(Time, Flies_Like_An_Arrow)` being indistinguishable from `TEST(Time_Flies, Like_An_Arrow)`.
-- This restriction applies to both test suite and individual test names.
-
-
-### 2.2. Changes Related to Mock Method Declaration and Expectation
-
-With evolving C++ standards and GoogleMock improvements, mock method declarations must precisely match the signature and qualifiers of the methods they mock. This includes constness, noexcept specifications, and reference qualifiers.
-
-**Impact:**
-- Failing to declare mocks with the correct qualifiers leads to compilation errors or silent failures where the mock may not properly intercept calls.
-- Mocks of overloaded methods must specify overloads unambiguously.
-
-**Migration steps:**
-- Always include the `(override)` specifier in `MOCK_METHOD` declarations.
-- For const methods, include `(const, override)`.
-- For noexcept methods, include `(noexcept, override)` as appropriate.
-- For methods with reference qualifiers (`&` or `&&`), use the `ref()` specifier.
-
-Example:
 ```cpp
-class Foo {
-  virtual int Bar() const noexcept = 0;
-  virtual void Baz() & = 0;
-};
+// Old style:
+MOCK_METHOD1(Foo, bool(int));
 
-class MockFoo : public Foo {
- public:
-  MOCK_METHOD(int, Bar, (), (const, noexcept, override));
-  MOCK_METHOD(void, Baz, (), (ref(&), override));
-};
+// New style:
+MOCK_METHOD(bool, Foo, (int), (override));
 ```
 
+- **Use the fourth parameter** to specify qualifiers correctly, e.g.,
 
-### 2.3. Default Argument Handling in `EXPECT_CALL` and `ON_CALL`
-
-GoogleMock used to be more lenient when matching calls with default arguments. Now, arguments must typically match expectations explicitly.
-
-**Impact:**
-- Calls relying on default arguments may require explicit matchers.
-
-**Migration steps:**
-- Use appropriate matchers (`_` for "anything") in `EXPECT_CALL` and `ON_CALL` when ignoring certain arguments.
-- Avoid over-specifying expectations unnecessarily.
-
-
-### 2.4. Strict Enforcement of Call Order and Cardinality
-
-GoogleMock enforces expectations strictly:
-- Calls beyond the `Times()` limit are failures.
-- Matching expectations are searched from newest to oldest.
-- Calls must respect explicit sequences or `After()` clauses.
-
-**Impact:**
-- Test code that had ambiguous or insufficiently specified mocks might start failing.
-
-**Migration steps:**
-- Inspect failing tests for mismatched call counts or orders.
-- Use `RetiresOnSaturation()` for expectations you want deactivated after saturation.
-- Use sequences to enforce order only when needed.
-
-Example:
 ```cpp
-EXPECT_CALL(mock, Foo(7))
-  .Times(2)
-  .RetiresOnSaturation();
-EXPECT_CALL(mock, Foo(_))
-  .Times(AnyNumber());
+MOCK_METHOD(void, Process, (int), (const, noexcept));
 ```
 
+- **Wrap types containing commas in extra parentheses** or use type aliases to avoid parsing issues:
 
-### 2.5. Handling of NULL vs nullptr in Assertions
+```cpp
+// Wrap the return type in parentheses
+MOCK_METHOD((std::pair<bool, int>), GetPair, ());
 
-GoogleTest encourages using `nullptr` instead of `NULL`.
+// Or use a type alias
+using BoolIntPair = std::pair<bool,int>;
+MOCK_METHOD(BoolIntPair, GetPair, ());
+```
 
-**Impact:**
-- Use `EXPECT_EQ(ptr, nullptr)` instead of `EXPECT_EQ(NULL, ptr)` to avoid template resolution issues.
-
-**Migration steps:**
-- Update NULL comparisons to use C++11 `nullptr`.
-
-
-### 2.6. Death Test Restrictions
-
-Death tests execute in subprocesses and impose restrictions on global state and multithreading.
-
-**Impact:**
-- Tests may fail or deadlock if multithreading occurs outside the immediate death test code.
-
-**Migration steps:**
-- Ensure all threading occurs inside `EXPECT_DEATH` or `ASSERT_DEATH` blocks.
-- Consider setting `--gtest_death_test_style=threadsafe` for safer runs, albeit slower.
+- **Ensure mock methods are declared in the `public:` section** of your mock class regardless of the base class access level.
 
 
-## 3. Migration Steps: How to Adapt Your Code
+## 2. Introduction of Strictness Modifiers for Mocks: `NiceMock`, `NaggyMock`, and `StrictMock`
 
-### 3.1. Renaming Tests to Avoid Underscores
+### What Changed
+GoogleMock provides three distinct behaviors regarding uninteresting mock calls (calls to mocked methods without expectations):
 
-- Review all `TEST()` and `TEST_F()` macros for test names and suite names containing `_`.
-- Use find-and-replace across your codebase to replace underscores with camelCase or PascalCase equivalents.
-- Re-run your tests and fix failures promptly.
+- **`NiceMock<T>`:** Suppresses warnings for uninteresting calls, making tests cleaner when calls are expected but not explicitly verified.
+- **`NaggyMock<T>`:** The current default behavior that prints warnings for uninteresting calls.
+- **`StrictMock<T>`:** Treats uninteresting calls as test failures, enforcing exact verification.
+
+These modifiers wrap your mock classes to control how strictly calls outside expectations are handled.
+
+### Why It Matters
+The addition and gradual default shift to `NiceMock` reflect Google’s recommendation to write tests that are less brittle and easier to maintain. However, if your tests rely on the previous default behavior (`NaggyMock`), or if you want to strictly verify all calls, you may need to adjust your mocks accordingly.
+
+### What to Do
+- **Choose the strictness level explicitly:**
+
+```cpp
+using ::testing::NiceMock;
+using ::testing::StrictMock;
+
+// Use strict mock to enforce expectations on all mocks
+StrictMock<MyMock> mock_strict;
+
+// Use nice mock to suppress warnings for calls without EXPECT_CALL
+NiceMock<MyMock> mock_nice;
+```
+
+- **Avoid nesting strictness modifiers.** `NiceMock<StrictMock<T>>` or vice versa is not supported.
+
+- **Ensure your mock classes have virtual destructors** to avoid issues with strictness wrappers.
+
+- **Remember that strictness modifiers only affect uninteresting calls, not unexpected ones.** Unexpected calls (not matched by any expectation) always cause failures.
 
 
-### 3.2. Correcting Mock Method Declarations
+## 3. Changes in Default Action and Expectation Rules
 
-- For every `MOCK_METHOD` in your mock classes, verify it matches the base method signature precisely, including `const`, `noexcept`, and `ref` qualifiers.
-- Add `(override)` if missing.
-- For overloaded methods, use disambiguation helpers like `Const()` or explicit type casts in `EXPECT_CALL()` or `ON_CALL()`.
+### What Changed
+- Expectations defined later take precedence (“newer overrides older”) when matching calls.
+- When no `Times()` is specified and there are multiple `WillOnce()` or `WillRepeatedly()` actions, GoogleMock infers the cardinality to fit the actions.
+- Calls to mock methods without any expectations will:
+  - Trigger warnings with `NaggyMock`
+  - Be ignored silently in `NiceMock`
+  - Cause failures in `StrictMock`
+
+- Expectation retirement behavior can be controlled explicitly with `.RetiresOnSaturation()`.
+
+### Why It Matters
+These changes refine how GoogleMock matches calls with expectations, improving flexibility but also risking surprising behaviors if your tests assume a different matching order or behavior.
+
+### What to Do
+- **Review your `EXPECT_CALL`s order and use chaining appropriately:**
+
+```cpp
+EXPECT_CALL(mock, Foo())
+    .WillOnce(Return(1))
+    .WillOnce(Return(2));
+```
+
+- **Explicitly specify `.RetiresOnSaturation()` when needed to disable repetitive matching of saturated expectations.
+- Use `ON_CALL()` for setting default behaviors without imposing call expectations.
 
 
-### 3.3. Refining Expectations and Default Behaviors
+## 4. Overloads and Qualifiers in Mock Methods
 
-- Add `.Times(AnyNumber())` on expectations where you allow unrestricted calls.
-- Use `ON_CALL()` to specify default behavior for methods that are called but not explicitly expected.
-- Introduce sequences or `After()` clauses only where precise call order is crucial.
+### What Changed
+The new mocking syntax fully supports:
+
+- Overloading methods based on argument count, types, and constness.
+- Reference-qualified methods (`&`, `&&`), `noexcept`, and Windows-specific calling conventions (`Calltype(STDMETHODCALLTYPE)`).
+
+### Why It Matters
+Complex interfaces with overloads and special qualifiers can now be mocked more precisely and correctly.
+
+### What to Do
+- **Use `MOCK_METHOD` with appropriate qualifiers:**
+
+```cpp
+MOCK_METHOD(int, OverloadedMethod, (), (override));
+MOCK_METHOD(int, OverloadedMethod, (int), (const, override));
+```
+
+- **For reference qualifiers:**
+
+```cpp
+MOCK_METHOD(int, DoSomething, (), (const, ref(&), override));
+MOCK_METHOD(int, DoSomething, (), (const, ref(&&), override));
+```
+
+- **For Windows calling conventions, specify `Calltype`:**
+
+```cpp
+MOCK_METHOD(void, Func, (), (Calltype(STDMETHODCALLTYPE), override));
+```
+
+- If your compiler produces warnings about const parameters, consider removing top-level `const` on parameters since it's ignored in C++.
 
 
-### 3.4. Updating Assertions for null Pointer Comparisons
+## 5. Mocking Move-Only Types
 
-- Replace `EXPECT_EQ(NULL, ptr)` with `EXPECT_EQ(ptr, nullptr)` or `EXPECT_THAT(ptr, ::testing::IsNull())`.
-- Avoid `EXPECT_NE(NULL, ptr)`, using `EXPECT_TRUE(ptr != nullptr)` instead.
+### What Changed
+GoogleMock now supports mocking methods that accept and return move-only types (e.g., `std::unique_ptr`). This is a vital addition for modern C++ codebases.
+
+### Why It Matters
+You can now directly mock interfaces using move-only types without complex workarounds.
+
+### What to Do
+- Use `MOCK_METHOD` as usual with move-only types:
+
+```cpp
+MOCK_METHOD(std::unique_ptr<MyClass>, Create, (int x), (override));
+```
+
+- For return values, avoid `Return(std::move(...))` in `WillRepeatedly()`. Instead, use lambdas that create new objects each invocation.
+
+- When mocking methods that take move-only arguments, prefer lambdas or functors for defining actions.
+
+- Legacy workarounds using proxy mock methods for move-only types are no longer necessary but can still be used.
 
 
-### 3.5. Death Test Adjustments
+## 6. Mocking Expectations, Logging, and Diagnostics Improvements
 
-- Move mock expectations inside `EXPECT_DEATH` blocks if their side effects need to be observed.
-- Eliminate or delay thread creation outside death test code.
-- Use the `threadsafe` death test style if needed.
+### What Changed
+- Added finer control over expectation chaining, with `.With()`, `.Times()`, `.InSequence()`, `.After()`, `.WillOnce()`, `.WillRepeatedly()`, and `.RetiresOnSaturation()` modifiers.
+- Enhanced diagnostics for uninteresting and unexpected calls, including stack traces and detailed matching explanations when using `--gmock_verbose=info`.
+- Revised error messages and warnings for more clarity.
+
+### Why It Matters
+These changes help create more robust, informative, and maintainable tests.
+
+### What to Do
+- Enable verbose logging when troubleshooting with `--gmock_verbose=info`.
+- Use sequences (`Sequence` and `InSequence`) and dependencies (`After`) to specify call order requirements.
+- Appropriately combine `ON_CALL` and `EXPECT_CALL` to separate default behavior and verification.
 
 
-## 4. Troubleshooting Common Upgrade Failures
+## 7. Deprecated or Removed Features
 
-- **Compilation fails with name-related errors:** Likely caused by underscore violations in test or suite names. Check all test names for underscores and rename.
+- Old `MOCK_METHODn` macros are still supported but superseded by `MOCK_METHOD`.
+- Nesting of strictness wrappers is unsupported and discouraged.
+- Some legacy macros for call types are deprecated in favor of unified syntax.
 
-- **Mock method signature mismatch errors:** Compare your mock class declarations against the latest base class/method definitions to ensure qualifiers align.
 
-- **Unexpected call failures in mocks:** Review your `EXPECT_CALL` and `ON_CALL` definitions. Add `.Times()` clauses or default behaviors.
+## Troubleshooting Common Issues Related to Breaking Changes
 
-- **Death test hangs or crashes:** Confirm threads aren’t active outside `EXPECT_DEATH`, and try the `threadsafe` death test style.
+<AccordionGroup title="Common Issues and Solutions">
+<Accordion title="Compilation Failures with MOCK_METHOD">
+If you encounter compilation errors related to commas in types, wrap return types or argument types containing commas with an additional set of parentheses or use type aliases.
+</Accordion>
+<Accordion title="Warnings About Uninteresting Calls">
+If tests flood with warnings about uninteresting calls, consider using `NiceMock` to suppress them or explicitly specify expectations with `.Times(AnyNumber())`.
+</Accordion>
+<Accordion title="Tests Failing Due to Unexpected Calls">
+Unexpected calls that violate expectations cause failures; review your expectations and consider adding catch-all `EXPECT_CALL` with wildcard matchers to allow untested calls.
+</Accordion>
+<Accordion title="Issues with Overloaded Methods">
+Use the `Const()` wrapper or explicit casts to disambiguate overloaded method expectations.
+</Accordion>
+</AccordionGroup>
 
-## 5. Best Practices Moving Forward
 
-- **Adopt naming conventions** disallowing underscores in test suite and test names.
-- **Explicitly specify qualifiers** in your mock methods and expectations to avoid ambiguity.
-- **Use ON_CALL for defaults** and EXPECT_CALL for verifications, avoiding over-specification.
-- **Keep death test code isolated** and deterministic.
-- Regularly validate your test suite with `--gmock_verbose=info` to capture unexpected interactions early.
-- When introducing new mocks, use `NiceMock` for relaxed expectations during development.
+## Summary
 
-## 6. Additional Resources
+This page focuses exclusively on breaking changes related to GoogleMock's mocking and expectation features, guiding you to adapt your tests and mocks when upgrading.
 
-- [GoogleTest Primer](https://google.github.io/googletest/primer.html) — Getting started with writing tests
-- [gMock for Dummies](https://google.github.io/googletest/gmock_for_dummies.html) — Beginner-friendly guide for mocks
-- [Mocking Reference](https://google.github.io/googletest/reference/mocking.html) — Comprehensive reference on mocking
-- [gMock Cookbook](https://google.github.io/googletest/gmock_cook_book.html) — Advanced mock patterns and recipes
-- [FAQ: General Usage & Troubleshooting](https://google.github.io/googletest/faq.html#getting_started)
-- [Changelog: Recent Releases & Highlights](../version-history/recent-releases)
+Key topics include:
+
+- Migration from `MOCK_METHODn` to the generic `MOCK_METHOD` macro
+- Use and impact of strictness modifiers: `NiceMock`, `NaggyMock`, and `StrictMock`
+- Updated rules for expectation matching and call order
+- Full support for overloads, qualifiers, and call types
+- Enhanced mocking for move-only types
+- Improved diagnostics and logging behavior
+- Known deprecated features and migration recommendations
+
+For detailed examples and deeper guidance, please consult the [Mocking Reference](https://github.com/google/googletest/blob/main/docs/reference/mocking.md), the [gMock Cookbook](https://github.com/google/googletest/blob/main/docs/gmock_cook_book.md), and the [FAQ on mocking challenges](https://github.com/google/googletest/blob/main/docs/gmock_faq.md).
 
 ---
 
-<Check>
-Always keep test and suite names free of underscores to avoid naming collisions.
-Verify mock method signatures for exact match to avoid compilation errors.
-Use ON_CALL for default mock behaviors and EXPECT_CALL sparingly for verification.
-Follow death test best practices to ensure reliability in concurrent environments.
-</Check>
+<Note>
+Always review your existing test suites to identify mocks and expectations affected by these changes and incrementally apply the recommended fixes to ensure test stability and maintainability.
+</Note>
 
 ---
+
+## Resources
+
+- [Mocking Reference](https://github.com/google/googletest/blob/main/docs/reference/mocking.md)
+- [gMock Cookbook](https://github.com/google/googletest/blob/main/docs/gmock_cook_book.md)
+- [Legacy gMock FAQ](https://github.com/google/googletest/blob/main/docs/gmock_faq.md)
+- [Mocking Strategies and Strictness Guide](https://github.com/google/googletest/blob/main/concepts/mocking-strategies-extensibility/strictness-and-behavior.md)
+
+---
+
+## Additional Tips
+
+- To leverage new mocking features with minimal disruption, consider:
+  - Starting with new mocks using `MOCK_METHOD` and strictness wrappers.
+  - Gradually migrating legacy mocks.
+  - Keeping your tests as declarative and focused on behavior rather than implementation specifics.
+
+- Use `ON_CALL()` for setting default mock behaviors and reserve `EXPECT_CALL()` for asserting specific interactions.
+- Utilize sequence and order modifiers (`InSequence`, `After`) judiciously to verify call ordering without making tests brittle.
+
+---
+
+For a comprehensive overview of all recent changes, see the [Recent Changes Changelog](https://github.com/google/googletest/blob/main/docs/changelog/recent-changes.md).
+
+---
+
+All URLs point to the official [GoogleTest GitHub repository](https://github.com/google/googletest).
